cmake_minimum_required(VERSION 4.1)

add_subdirectory(01_SyncTimer)
add_subdirectory(02_AsyncTimer)
add_subdirectory(03_ArgumentsBinding)
add_subdirectory(04_MemberFunctionAsCompletionHandler)
add_subdirectory(05_Multithreading)
add_subdirectory(11_SyncDatimeClient)
add_subdirectory(12_SyncDaytimeServer)
add_subdirectory(13_AsyncDaytimeServer)
add_subdirectory(21_UDPSyncDaytimeClient)
add_subdirectory(22_UDPSyncDaytimeServer)
add_subdirectory(23_UDPAsyncDaytimeServer)
add_subdirectory(24_UDPTCPServer)